Fixed floating images from overflowing into the next chapter

--- a/shared-content.css
+++ b/shared-content.css
@@ -25,6 +25,8 @@
 	margin-top: 30px;
 	margin-bottom: 10px;
 	padding: 0px;
+	width: calc(100%-80px);
+	clear: both;
 }
 
 .shared-content-paragraph
